# wgml

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/wgml/: Cargo.toml
crates/wgml-bench/: Cargo.toml
crates/wgml-bench/src/: cli.rs  main.rs
crates/wgml-chat/: Cargo.toml  Dioxus.toml  README.md  index.html
crates/wgml-chat-dioxus/: Cargo.toml  Dioxus.toml
crates/wgml-chat-dioxus/src/: chat_gpt2.rs  chat_llama2.rs  llm.rs  sampler.rs
crates/wgml-chat-dioxus/src/components/: chat.rs  home.rs  mod.rs
crates/wgml-chat/assets/styling/: main.css
crates/wgml-chat/src/: app.rs  chat_gpt2.rs  chat_llama2.rs  chat_template.rs  cli.rs  llm.rs  main.rs  prompt.rs  sampler.rs
crates/wgml-chat/src/components/: chat.rs  home.rs
crates/wgml/src/: gguf.rs  lib.rs  quantization.rs  quantized_matrix.rs
crates/wgml/src/models/: sampler.rs
crates/wgml/src/models/gpt2/: mod.rs  tokenizer.rs  transformer.rs
crates/wgml/src/models/llama2/: cpu.rs  mod.rs  tokenizer.rs  transformer.rs
crates/wgml/src/ops/: batched_multiquery_attention.rs  batched_multiquery_attention.wgsl  gemv_quant.rs  gemv_quant_q4_0x2.wgsl  gemv_quant_q4_0x2_slow.wgsl  gemv_quant_q4_1x2.wgsl  gemv_quant_q4_k.wgsl  gemv_quant_q4_k_slow.wgsl  gemv_quant_q5_0x2.wgsl  gemv_quant_q5_1x2.wgsl  gemv_quant_q5_k.wgsl  gemv_quant_q5_k_slow.wgsl  gemv_quant_q6_kx2.wgsl  gemv_quant_q6_kx2_slow.wgsl  gemv_quant_q8_0x2.wgsl  gemv_quant_q8_0x2_slow.wgsl  gemv_quant_q8_k.wgsl  layernorm.rs  mod.rs  quantization.rs  quantization.wgsl  quantization_test.wgsl  rms_norm.rs  rms_norm.wgsl  rope.rs  rope.wgsl  silu.rs  softmax.rs  softmax.wgsl  unary.rs  unary.wgsl
