[package]
name = "wgml-chat"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
wgcore = "0.2"
wgml = {  version = "0.2", path = "../wgml" }

nalgebra = "0.33"
async-channel = "2"
async-trait = "0.1"
anyhow = "1"
async-std = { version = "1", features = ["attributes"] }
minijinja = "2.5"
llm-samplers = "0.0.7"
rand = { version = "0.8", features = ["getrandom"] }


# UI
egui = "0.29"
egui_extras = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }
rfd = { version = "0.15", features = ["file-handle-inner"] }
log = "0.4.19"
web-time = "1"

# CLI
clap = { version = "4", features = ["derive"] }
regex = "1.11.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
futures = "0.3.28"
memmap2 = "0.9.4"
colored = "3.0.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
