[package]
name = "wgml"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform GPU LLM inference."
homepage = "https://wgmath.rs"
repository = "https://github.com/dimforge/wgmath"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
wgcore = "0.2"
wgebra = "0.2"
nalgebra = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_std"] }
anyhow = { workspace = true }
async-channel = { workspace = true }
naga_oil = { workspace = true }
thiserror = { workspace = true }

# For tokenizer. Move behind feature?
byteorder = "1"
ordered-float = "4"
rand = "0.8"
regex = "1.10.5"
serde_json = "1.0.127"

# For wasm?
getrandom = { version = "0.2.15", features = ["js"] }

# For debugging.
log = "0.4"

[dev-dependencies]
futures-test = "0.3"
serial_test = "3"
nalgebra = { version = "0.33", features = ["rand"] }
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
half = "2"

## For examples
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
memmap2 = "0.9.4"
num-derive = "0.4"
